--- a/index.html
+++ b/index.html
@@ -175,8 +175,8 @@
                           <div class="card">
                             <div class="projects_wraper">
                                 <a href="project-details.html"><div class="project hovereffect">
-                                  <a href="https://sketch.cloud/s/YGJgm"><img src="img/img1.png" alt="img1" class="img-responsive"></a>
-                                  <a href="https://sketch.cloud/s/YGJgm"><h3>mySchneider Electric</h3></a>
+                                  <a href="https://sketch.cloud/s/YGJgm" target="_blank"><img src="img/img1.png" alt="img1" class="img-responsive"></a>
+                                  <a href="https://sketch.cloud/s/YGJgm" target="_blank"><h3>mySchneider Electric</h3></a>
                                   <h2>🚧 Case Study soon ...</h2>
                                 </div></a>
                                 <!-- <h2>mySchneider Electric App (iOS, Android...)</h2> -->
@@ -186,21 +186,8 @@
                           <div class="card">
                             <div class="projects_wraper">
                                 <a href="project-details.html"><div class="project hovereffect">
-                                  <a href="#"><img src="img/img3.png" alt="img3" class="img-responsive"></a>
-                                  <a href="#"><h3>Home Favor</h3></a>
-                                  <h2>🚧 Case Study soon ...</h2>
-                                </div></a>
-                                <!-- <h2>mySchneider Electric App (iOS, Android...)</h2> -->
-                            </div>
-                          </div>
-
-
-
-                          <div class="card">
-                            <div class="projects_wraper">
-                                <a href="project-details.html"><div class="project hovereffect">
-                                  <a href="#"><img src="img/img2.png" alt="img2" class="img-responsive"></a>
-                                  <a href="#"><h3>Startup Patterns</h3></a>
+                                  <a href="#" target="_blank"><img src="img/img3.png" alt="img3" class="img-responsive"></a>
+                                  <a href="#" target="_blank"><h3>Home Favor</h3></a>
                                   <h2>🚧 Case Study soon ...</h2>
                                 </div></a>
                                 <!-- <h2>mySchneider Electric App (iOS, Android...)</h2> -->
@@ -212,8 +199,21 @@
                           <div class="card">
                             <div class="projects_wraper">
                                 <a href="project-details.html"><div class="project hovereffect">
-                                  <a href="https://invis.io/KCS3O03JTA3"><img src="img/img6.png" alt="img6" class="img-responsive"></a>
-                                  <a href="https://invis.io/KCS3O03JTA3"><h3>Hundred and one percent</h3></a>
+                                  <a href="#" target="_blank"><img src="img/img2.png" alt="img2" class="img-responsive"></a>
+                                  <a href="#" target="_blank"><h3>Startup Patterns</h3></a>
+                                  <h2>🚧 Case Study soon ...</h2>
+                                </div></a>
+                                <!-- <h2>mySchneider Electric App (iOS, Android...)</h2> -->
+                            </div>
+                          </div>
+
+
+
+                          <div class="card">
+                            <div class="projects_wraper">
+                                <a href="project-details.html"><div class="project hovereffect">
+                                  <a href="https://invis.io/KCS3O03JTA3" target="_blank"><img src="img/img6.png" alt="img6" class="img-responsive"></a>
+                                  <a href="https://invis.io/KCS3O03JTA3" target="_blank"><h3>Hundred and one percent</h3></a>
                                   <h2>🚧 Case Study soon ...</h2>
                                 </div></a>
                                 <!-- <h2>mySchneider Electric App (iOS, Android...)</h2> -->
@@ -223,8 +223,8 @@
                           <div class="card">
                             <div class="projects_wraper">
                                 <a href="project-details.html"><div class="project hovereffect">
-                                  <a href="#"><img src="img/img7.png" alt="img7" class="img-responsive"></a>
-                                  <a href="#"><h3>United Remote</h3></a>
+                                  <a href="#" target="_blank"><img src="img/img7.png" alt="img7" class="img-responsive"></a>
+                                  <a href="#" target="_blank"><h3>United Remote</h3></a>
                                   <h2>🚧 Case Study soon ...</h2>
                                 </div></a>
                                 <!-- <h2>mySchneider Electric App (iOS, Android...)</h2> -->
@@ -246,8 +246,8 @@
                           <div class="card">
                             <div class="projects_wraper">
                                 <a href="project-details.html"><div class="project hovereffect">
-                                  <a href="#"><img src="img/img5.png" alt="img5" class="img-responsive"></a>
-                                  <a href="#"><h3>Swap monekys</h3></a>
+                                  <a href="#" target="_blank"><img src="img/img5.png" alt="img5" class="img-responsive"></a>
+                                  <a href="#" target="_blank"><h3>Swap monekys</h3></a>
                                   <h2>🚧 Case Study soon ...</h2>
                                 </div></a>
                                 <!-- <h2>mySchneider Electric App (iOS, Android...)</h2> -->
@@ -257,8 +257,8 @@
                           <div class="card">
                             <div class="projects_wraper">
                                 <a href="project-details.html"><div class="project hovereffect">
-                                  <a href="https://invis.io/BDS3NTVKM2X"><img src="img/img4.png" alt="img4" class="img-responsive"></a>
-                                  <a href="https://invis.io/BDS3NTVKM2X"><h3>Sonasid</h3></a>
+                                  <a href="https://invis.io/BDS3NTVKM2X" target="_blank"><img src="img/img4.png" alt="img4" class="img-responsive"></a>
+                                  <a href="https://invis.io/BDS3NTVKM2X" target="_blank"><h3>Sonasid</h3></a>
                                   <h2>🚧 Case Study soon ...</h2>
                                 </div></a>
                                 <!-- <h2>mySchneider Electric App (iOS, Android...)</h2> -->
@@ -287,16 +287,16 @@
                     </div>
                     <div class="contact boxs">
                         <h3>Contacts me at</h3>
-                        <div class="text-center"><a href="mailto:karim@elkharraz.design">Karim@elkharraz.design</a></div>
+                        <div class="text-center"><a href="mailto:karim@elkharraz.design" target="_blank">Karim@elkharraz.design</a></div>
                         <p>Currently accepting enquiries for small <span> and medium sized projects.</span></p>
                     </div>
                     <div class="f_social boxs pos_f">
                         <div class="col-sm-12 nopadding">
                             <div class="text-center">
                                 <p>YOU CAN FIND ME ON </p>
-                                <a href="https://twitter.com/karimmove">Twitter</a>
-                                <a href="https://dribbble.com/karimmove">Dribbble</a>
-                                <a href="https://instagram.com/karim.elkharraz">Instagram</a>
+                                <a href="https://twitter.com/karimmove" target="_blank">Twitter</a>
+                                <a href="https://dribbble.com/karimmove" target="_blank">Dribbble</a>
+                                <a href="https://instagram.com/karim.elkharraz" target="_blank">Instagram</a>
                             </div>
                         </div>
                         <a href="javascript:void(0)" class="top"><img src="img/top.svg" alt="top" class="img-responsive img_show"><img src="img/top_hover.svg" alt="top_hover" class="img-responsive img_hide">Back to top</a>
