update startup patterns

--- a/index.html
+++ b/index.html
@@ -199,8 +199,8 @@
                           <div class="card">
                             <div class="projects_wraper">
                                 <a href="project-details.html"><div class="project hovereffect">
-                                  <a href="#" target="_blank"><img src="img/img2.png" alt="img2" class="img-responsive"></a>
-                                  <a href="#" target="_blank"><h3>Startup Patterns</h3></a>
+                                  <a href="https://invis.io/2JS65SZ6K48" target="_blank"><img src="img/img2.png" alt="img2" class="img-responsive"></a>
+                                  <a href="https://invis.io/2JS65SZ6K48" target="_blank"><h3>Startup Patterns</h3></a>
                                   <h2>🚧 Case Study soon ...</h2>
                                 </div></a>
                                 <!-- <h2>mySchneider Electric App (iOS, Android...)</h2> -->
