--- a/index.html
+++ b/index.html
@@ -175,8 +175,8 @@
                           <div class="card">
                             <div class="projects_wraper">
                                 <a href="project-details.html"><div class="project hovereffect">
-                                  <a href="https://sketch.cloud/s/YGJgm" target="_blank"><img src="img/img1.png" alt="img1" class="img-responsive"></a>
-                                  <a href="https://sketch.cloud/s/YGJgm" target="_blank"><h3>mySchneider Electric</h3></a>
+                                  <a href="#" target="_blank"><img src="img/img1.png" alt="img1" class="img-responsive"></a>
+                                  <a href="#" target="_blank"><h3>mySchneider Electric</h3></a>
                                   <h2>🚧 Case Study soon ...</h2>
                                 </div></a>
                                 <!-- <h2>mySchneider Electric App (iOS, Android...)</h2> -->
@@ -199,8 +199,8 @@
                           <div class="card">
                             <div class="projects_wraper">
                                 <a href="project-details.html"><div class="project hovereffect">
-                                  <a href="https://invis.io/X3S65P74NQ7" target="_blank"><img src="img/img2.png" alt="img2" class="img-responsive"></a>
-                                  <a href="https://invis.io/X3S65P74NQ7" target="_blank"><h3>Startup Patterns</h3></a>
+                                  <a href="#" target="_blank"><img src="img/img2.png" alt="img2" class="img-responsive"></a>
+                                  <a href="#" target="_blank"><h3>Startup Patterns</h3></a>
                                   <h2>🚧 Case Study soon ...</h2>
                                 </div></a>
                                 <!-- <h2>mySchneider Electric App (iOS, Android...)</h2> -->
@@ -212,8 +212,8 @@
                           <div class="card">
                             <div class="projects_wraper">
                                 <a href="project-details.html"><div class="project hovereffect">
-                                  <a href="https://invis.io/KCS3O03JTA3" target="_blank"><img src="img/img6.png" alt="img6" class="img-responsive"></a>
-                                  <a href="https://invis.io/KCS3O03JTA3" target="_blank"><h3>Hundred and one percent</h3></a>
+                                  <a href="#" target="_blank"><img src="img/img6.png" alt="img6" class="img-responsive"></a>
+                                  <a href="#" target="_blank"><h3>Hundred and one percent</h3></a>
                                   <h2>🚧 Case Study soon ...</h2>
                                 </div></a>
                                 <!-- <h2>mySchneider Electric App (iOS, Android...)</h2> -->
@@ -233,9 +233,9 @@
 
                           <div class="card">
                             <div class="projects_wraper">
-                                <a href="https://sketch.cloud/s/5AmJW" target="_blank"><div class="project hovereffect">
-                                  <a href="https://sketch.cloud/s/5AmJW" target="_blank"><img src="img/img8.png" alt="img8" class="img-responsive"></a>
-                                  <a href="https://sketch.cloud/s/5AmJW" target="_blank"><h3>Jible</h3></a>
+                                <a href="#" target="_blank"><div class="project hovereffect">
+                                  <a href="#" target="_blank"><img src="img/img8.png" alt="img8" class="img-responsive"></a>
+                                  <a href="#" target="_blank"><h3>Jible</h3></a>
                                   <h2>(ScreenShots available) - Case Study soon ... 🚧</h2>
                                 </div></a>
                                 <!-- <h2>mySchneider Electric App (iOS, Android...)</h2> -->
@@ -257,8 +257,8 @@
                           <div class="card">
                             <div class="projects_wraper">
                                 <a href="project-details.html"><div class="project hovereffect">
-                                  <a href="https://invis.io/BDS3NTVKM2X" target="_blank"><img src="img/img4.png" alt="img4" class="img-responsive"></a>
-                                  <a href="https://invis.io/BDS3NTVKM2X" target="_blank"><h3>Sonasid</h3></a>
+                                  <a href="#" target="_blank"><img src="img/img4.png" alt="img4" class="img-responsive"></a>
+                                  <a href="#" target="_blank"><h3>Sonasid</h3></a>
                                   <h2>🚧 Case Study soon ...</h2>
                                 </div></a>
                                 <!-- <h2>mySchneider Electric App (iOS, Android...)</h2> -->
