--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                             <ul class="nav navbar-nav navbar-right">
                                 <li><a href="about.html">👨 About</a></li>
                                 <!-- <li><a href="projects.html">Work</a></li>  -->
-                                <li><a href="https://bit.ly/2Wa7JgN" target="_blank">🎖️ resume</a></li>
+                                <li><a href="https://drive.google.com/file/d/1ItVBfUszWRyycsvoqC43xwZ8F9K7mtri/view?usp=sharing" target="_blank">🎖️ resume</a></li>
                                 <li><a target="_blank" href="mailto:karim@elkharraz.design">✉️ Email</a></li>
                             </ul>
                         </div>
