--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                         <div class="collapse navbar-collapse" id="navbar">
                             <ul class="nav navbar-nav navbar-right">
                                 <li><a href="about.html">👨 About</a></li>
-                                <!-- <li><a href="projects.html">Work</a></li>  -->
+                                <li><a href="projects.html">Work</a></li> 
                                 <li><a href="https://drive.google.com/file/d/1ItVBfUszWRyycsvoqC43xwZ8F9K7mtri/view?usp=sharing" target="_blank">🎖️ resume</a></li>
                                 <li><a target="_blank" href="mailto:karim@elkharraz.design">✉️ Email</a></li>
                             </ul>
