--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
                             <ul class="nav navbar-nav navbar-right">
                                 <li><a href="about.html" class="active">👨 About</a></li>
 
-                                <!-- <li><a href="projects.html">Work</a></li>  -->
+                                <li><a href="projects.html">Work</a></li>  
                                 <li><a href="https://bit.ly/2Wa7JgN" target="_blank">🎖️ resume‍</a></li>
                                 <li><a target="_blank" href="mailto:karim@elkharraz.design">✉️ Email</a></li>
                             </ul>
