--- a/projects.html
+++ b/projects.html
@@ -47,7 +47,7 @@ a.appendChild(r);
                         <div class="collapse navbar-collapse" id="navbar">
                             <ul class="nav navbar-nav navbar-right">
                                 <li><a href="about.html">👨 About</a></li>
-                                <!-- <li><a href="projects.html" class="active" >Work</a></li>  -->
+                                <li><a href="projects.html" class="active" >Work</a></li>  
                                 <li><a href="https://bit.ly/2Wa7JgN" target="_blank">🎖️ resume‍</a></li>
                                 <li><a target="_blank" href="mailto:karim@elkharraz.design">✉️ Email</a></li>
                             </ul>
