--- a/projects.html
+++ b/projects.html
@@ -129,6 +129,39 @@ a.appendChild(r);
                       </div>
                     </div>
 
+                    <div class="card2">
+                      <div class="projects_wraper2">
+                          <a href="project-details.html"><div class="project hovereffect">
+                            <a href="https://placeholder.com"><img src="img/work_img5.png" alt="img1" class="img-responsive"></a>
+
+                          </div></a>
+                          <!-- <h2>mySchneider Electric App (iOS, Android...)</h2> -->
+                      </div>
+                    </div>
+
+                    <div class="card2">
+                      <div class="projects_wraper2">
+                          <a href="project-details.html"><div class="project hovereffect">
+                            <a href="https://placeholder.com"><img src="img/work_img6.png" alt="img1" class="img-responsive"></a>
+
+                          </div></a>
+                          <!-- <h2>mySchneider Electric App (iOS, Android...)</h2> -->
+                      </div>
+                    </div>
+
+                    <div class="card2">
+                      <div class="projects_wraper2">
+                          <a href="project-details.html"><div class="project hovereffect">
+                            <a href="https://placeholder.com"><img src="img/work_img7.png" alt="img1" class="img-responsive"></a>
+
+                          </div></a>
+                          <!-- <h2>mySchneider Electric App (iOS, Android...)</h2> -->
+                      </div>
+                    </div>
+
+
+
+
              </div>
           </div>
        </section>
