--- a/index.html
+++ b/index.html
@@ -97,6 +97,15 @@
 
           </style>
         <!-- End of Async Drift Code -->
+
+        <!-- Start of Heap Code -->
+        <script type="text/javascript">
+            window.heap=window.heap||[],heap.load=function(e,t){window.heap.appid=e,window.heap.config=t=t||{};var r=document.createElement("script");r.type="text/javascript",r.async=!0,r.src="https://cdn.heapanalytics.com/js/heap-"+e+".js";var a=document.getElementsByTagName("script")[0];a.parentNode.insertBefore(r,a);for(var n=function(e){return function(){heap.push([e].concat(Array.prototype.slice.call(arguments,0)))}},p=["addEventProperties","addUserProperties","clearEventProperties","identify","resetIdentity","removeEventProperty","setEventProperties","track","unsetEventProperty"],o=0;o<p.length;o++)heap[p[o]]=n(p[o])};
+
+            heap.load("4028535749");
+        </script>
+        <!-- Start of Heap Code -->
+
     </head>
     <body>
         <!-- Header Start -->
@@ -113,7 +122,7 @@
                         <div class="collapse navbar-collapse" id="navbar">
                             <ul class="nav navbar-nav navbar-right">
                                 <li><a href="about.html">👨 About</a></li>
-                                <li><a href="projects.html">Work</a></li> 
+                                <li><a href="projects.html">Work</a></li>
                                 <li><a href="https://drive.google.com/file/d/1ItVBfUszWRyycsvoqC43xwZ8F9K7mtri/view?usp=sharing" target="_blank">🎖️ resume</a></li>
                                 <li><a target="_blank" href="mailto:karim@elkharraz.design">✉️ Email</a></li>
                             </ul>
@@ -263,7 +272,7 @@
                                   <a href="#" target="_blank"><h3>Sonasid</h3></a>
                                   <h2>🚧 Case Study soon ...</h2>
                                 </div></a>
-                            
+
                             </div>
                           </div>
 
