--- a/project-details.html
+++ b/project-details.html
@@ -154,6 +154,16 @@
                         <h2>Challenge</h2>
                         <p>My task was to design the whole app experience and I used a lean UX approach I usually apply to startups I work with. This is a great method to develop a fast and good MVP.</p>
                     </div>
+
+                </div>
+                <div class="sketch_wraper">
+                    <img src="img/project-schneider/HomePage.png" class="img-responsive">
+                </div>
+                <div class="sketch_wraper">
+                    <img src="img/project-schneider/HomePage.png" class="img-responsive">
+                </div>
+                <div class="sketch_wraper">
+                    <img src="img/project-schneider/HomePage.png" class="img-responsive">
                 </div>
                 <div class="col-sm-8 col-sm-offset-2">
                     <div class="overview_paras">
@@ -168,7 +178,7 @@
                     </div>
 
                     <div class="sketch_wraper">
-                        <img src="img/sketches-search-1024-x-739.png" class="img-responsive">
+                        <img src="img/project-schneider/HomePage.png" class="img-responsive">
                     </div>
                 </div>
             </div>
@@ -178,19 +188,19 @@
             <div class="slick_background boxs">
                 <div class="slider boxs">
                     <div class="s_img">
-                        <img src="img/slider_img1.jpeg" class="img-responsive slide" id="slider0">
+                        <img src="img/project-schneider/HomePage.png" class="img-responsive slide" id="slider0">
                     </div>
                     <div class="s_img">
-                        <img src="img/slider_img2.png" class="img-responsive slide" id="slider1">
+                        <img src="img/project-schneider/HomePage.png" class="img-responsive slide" id="slider1">
                     </div>
                     <div class="s_img">
-                        <img src="img/slider_img3.jpeg" class="img-responsive slide" id="slider2">
+                        <img src="img/project-schneider/HomePage.png" class="img-responsive slide" id="slider2">
                     </div>
                     <div class="s_img">
-                        <img src="img/slider_img4.jpeg" class="img-responsive slide" id="slider3">
+                        <img src="img/project-schneider/HomePage.png" class="img-responsive slide" id="slider3">
                     </div>
                     <div class="s_img">
-                        <img src="img/slider_img5.jpeg" class="img-responsive slide" id="slider4">
+                        <img src="img/project-schneider/HomePage.png" class="img-responsive slide" id="slider4">
                     </div>
                 </div>
             </div>
