--- a/schneiderelectric.html
+++ b/schneiderelectric.html
@@ -102,7 +102,9 @@
                                 <div class="banner_heading boxs">
                                     <h1> mySchneider App</h1>
 
-                                    <p>The new mySchneider app offers tailored services, 24/7 self-service, and easy access to expert support and information. Its new interface design and imagery show a variety of work situations, emphasizing the app’s wide-ranging usefulness.
+                                    <p>mySchneider Electrician app gives you all the tools and resources you need for your domestic and small commercial installations, direct from your smartphone.
+
+From building a project to producing instant quotes for wiring devices and consumer units, as well as completing follow-up actions, you’ll find everything you need at your fingertips.
                                     </p>
 
                                 </div>
